[project]
name = "ai-agents-engineering"
version = "0.1.0"
description = "AI Agent Engineering study - design, implementation, and evaluation of autonomous AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "ipykernel>=6.29",
]
